Made the locators more consistent in the way they look at the path/name and handle Longs
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/trunk@9979 fdecad78-55fc-0310-b1b2-d7d25cf747c9